--- a/Taller1_Java/.project
+++ b/Taller1_Java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Infracomp-Lab1</name>
+	<name>Taller1_Java</name>
 	<comment></comment>
 	<projects>
 	</projects>
